connect-non-signal: Don't error out when connect has 3 arguments

That's possible when using lambdas
BUG: 375748