QtUtils.cpp
@@ -257,8 +257,8 @@ CXXMethodDecl *QtUtils::pmfFromConnect(CallExpr *funcCall, int argIndex)
         return nullptr;
 
     const int numArgs = funcCall->getNumArgs();
-    if (numArgs < 4) {
-        llvm::errs() << "error, connect call has less than 4 arguments\n";
+    if (numArgs < 3) {
+        llvm::errs() << "error, connect call has less than 3 arguments\n";
         return nullptr;
     }
 
