tests/connect-non-signal/bug375748.cpp
@@ -1,0 +1,13 @@
+#include <QtCore/QObject>
+
+class Foo: public QObject
+{
+    Q_OBJECT
+public:
+    Foo()
+    {
+        connect(this, &Foo::bar, []{});
+    }
+Q_SIGNALS:
+    void bar();
+};
